[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crisis-verify-env"
version = "0.1.0"
description = "OpenEnv-style crisis misinformation verification environment for hackathons."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "openai>=2.7.2,<3.0",
  "openenv-core>=0.2.0",
  "streamlit>=1.44,<2.0",
  "uvicorn>=0.30,<1.0",
]

[project.scripts]
server = "server.app:main"
crisis-verify-baseline = "baseline.run:main"

[tool.setuptools]
packages = ["crisis_verify_env", "baseline", "server"]
